# rdns

./: Cargo.toml  query.pcapng
rdig/: Cargo.toml
rdig/src/: arguments.rs  main.rs  os.rs
rdns-lib/: Cargo.toml
rdns-lib/src/: domain_name.rs  error.rs  header.rs  lib.rs  message.rs  name.rs  parser.rs  question.rs  resource_record.rs
rdns-lib/src/header/: opcode.rs  return_code.rs
